--- a/config/eureka-client-dev.yml
+++ b/config/eureka-client-dev.yml
@@ -7,3 +7,4 @@ server:
     client:
       serviceUrl:
       defaultZone: http://192.168.200.128:1001/eureka/,http://192.168.200.128:1002/eureka/,http://192.168.200.128:1003/eureka/
+test: dev分支
