--- a/config/dev/eureka-client-dev.yml
+++ b/config/dev/eureka-client-dev.yml
@@ -1,6 +1,12 @@
 spring:
   application:
     name: eureka-client
+  rabbitmq:                                #本地环境不需要配置mq
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+
 server:
   port: 2001
   eureka:
