--- a/config/dev/eureka-client-dev.yml
+++ b/config/dev/eureka-client-dev.yml
@@ -7,5 +7,5 @@ server:
   eureka:
     client:
       serviceUrl:
-      defaultZone: http://192.168.200.128:1001/eureka/,http://192.168.200.128:1002/eureka/,http://192.168.200.128:1003/eureka/
+      defaultZone: http://svc1:1001/eureka/,http://svc2:1002/eureka/,http://svc3:1003/eureka/
 test: dev分支
