--- a/config/dev/eureka-fegin-dev.yml
+++ b/config/dev/eureka-fegin-dev.yml
@@ -4,20 +4,29 @@ spring:
 server:
   port: 2101
   datasource:
-    url: jdbc:mysql://39.104.49.60:3306/springbootdemo?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+    url: jdbc:mysql://39.104.49.60:3306/springbootdemo?useSSL=false
+    #    url: jdbc:mysql://localhost:3306/springbootdemo?useSSL=false
+
     username: root
     password: 123456
-    driver-class-name: com.mysql.jdbc.Driver
-  type: com.alibaba.druid.pool.DruidDataSource
+    tomcat:
+      max-active: 100
+      max-idle: 200
+      initial-size: 20
+      driver-class-name: com.mysql.jdbc.Driver
+    #    type: com.zaxxer.hikari.HikariDataSource
+    type: com.alibaba.druid.pool.DruidDataSource
 
   jpa:
     generate-ddl: true
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     show-sql: true
     hibernate:
       ddl-auto: update
       naming:
         physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5Dialect
 eureka:
   client:
     serviceUrl:
