--- a/config/dev/client1-dev.yml
+++ b/config/dev/client1-dev.yml
@@ -1,8 +1,8 @@
 spring:
   application:
     name: eureka-fegin
-server:
-  port: 2101
+  #server:
+  #  port: 2101
   datasource:
     url: jdbc:mysql://39.104.49.60:3306/springbootdemo?useSSL=false
     #    url: jdbc:mysql://localhost:3306/springbootdemo?useSSL=false
