--- a/config/single/eureka-zuul-single.yml
+++ b/config/single/eureka-zuul-single.yml
@@ -4,6 +4,10 @@ spring:
   profiles: single
   application:
     name: eureka-zuul
+  #指定资源文件夹路径
+  thymeleaf:
+    cache: false
+    prefix: classpath:/view/
 
 eureka:
   client:
@@ -16,4 +20,4 @@ test: zuul
 #只要访问以/api/开头的多层目录都可以路由到服务名为cloud-provider的服务上.
 zuul:
   routes:
-    consumer1: /user/**
+    sso-server: /sso-server/**
