添加：单例云服务器的配置文件夹和文件

--- a/config/single/eureka-zuul-single.yml
+++ b/config/single/eureka-zuul-single.yml
@@ -23,3 +23,12 @@ eureka:
 zuul:
   routes:
     sso-server: /sso-server/**
+
+#监控关闭
+security:
+  basic:
+    enabled: false
+
+management:
+  security:
+    enabled: false
