添加：单例云服务器的配置文件夹和文件

--- a/config/single/blog-svc-single.yml
+++ b/config/single/blog-svc-single.yml
@@ -45,3 +45,10 @@ spring:
 
 blog-svc:
   url: http://localhost:${server.port}
+
+security:
+  oauth2:
+    resource:
+      id: ${spring.application.name}
+      user-info-uri: http://www.vivtoum.tech:5000/user
+      prefer-token-info: false
